# empack

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  azure-pipelines.yml  ci_env.yml  emboa-dev-requirements.yml  pyproject.toml  readthedocs.yml  setup.py
.ci/: test_project.sh
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: check-release.yaml  lint.yaml  prep-release.yml  publish-release.yml  workflow.yaml
config/: empack_config.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  theapi.rst  usage.rst
emboa/: file_packager.py
emboa/cli/: main.py  pack.py
empack/: __init__.py  extend_js.py  file_packager.py  file_patterns.py  filter_env.py  inspect.py  micromamba_wrapper.py  pack.py  patches.py  repodata.py  shrink_repodata.py  sort_packed.py  sqshfs_utils.py  tar_utils.py  toposort.py
empack/cli/: app.py  err.py  main.py  pack.py  repodata.py  version.py
emperator/: __init__.py  file_packager.py
emperator/cli/: pack.py
examples/: README.rst  plot_example.py
experiments/picomamba/: build_distribution.sh  create_experiment_env.sh  run_experiments.sh  upoload_to_s3.py
experiments/picomamba/code/: main.py  main_offline.py  main_online.py
notebooks/: hello_world.ipynb
recipe/: meta.yaml
sandbox/: extra_config.yaml
tests/: conftest.py  empack_test_config.yaml  empack_test_extra_config.yaml  test_cli.py  test_filter.py  test_integration.py  test_pack.py  test_version.py
