[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "empack"
description = "empack emscripten+boa"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Thorsten Beier", email = "derthorstenbeier@gmail.com" },
]
keywords = [
    "empack",
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "appdirs",
    "networkx",
    "pydantic",
    "pyyaml",
    "requests",
    "typer",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "ruff==0.0.262",
]

[tool.hatch.version]
path = "empack/version.py"

[project.scripts]
empack = "empack.cli.main:app"

[project.urls]
Homepage = "https://github.com/emscripten-forge/empack"

[tool.hatch.build.targets.wheel.shared-data]
config = "share/empack"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
target-version = "py38"
exclude = [
    "*/tests/*",
    "docs/source/tools/*",
]
line-length = 100
select = [
  "A", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "ISC", "N",
  "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "SIM", "T", "TID", "UP",
  "W", "YTT",
]
ignore = [
  "D100",
  "D104",
  # Q000 Single quotes found but double quotes preferred
  "Q000",
  # FBT001 Boolean positional arg in function definition
  "FBT001", "FBT002", "FBT003",
  # C408 Unnecessary `dict` call (rewrite as a literal)
  "C408", "C416",
  # allow for using print()
  "T201",
]

[tool.ruff.per-file-ignores]
# S101 Use of `assert` detected
# F841 Local variable `foo` is assigned to but never used
# PLR2004 Magic value used in comparison
"tests/*" = ["S101", "F841", "PLR2004"]

# E501 Line too long
"empack/micromamba_wrapper.py" = ["E501"]

[tool.ruff.isort]
known-third-party = ["pybind11", "conda", "conda_env"]
